--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @question.title %></h1>
 
 <%= link_to "Edit", edit_question_path(@question), class: 'btn btn-success' %>
+<%= link_to "Delete",  @question, class: 'btn btn-success', method: :delete %>
 <p><%= @question.body %></p>
-<%= link_to "Delete",  @question.destroy, class: 'btn btn-success' %>
