--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,21 +23,23 @@
   </ul>
 
   <% if flash[:notice] %>
-  <div class="alert alert-success">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <%= flash[:notice] %>
-  </div>
-  <% elsif flash[:error] %>
-  <div class="alert alert-danger">
-    <button type="button" class="close" data-dismiss ="alert">&times;</button>
-    <%= flash[:error] %>
-  </div>
-  <% elsif flash[:alert] %>
-         <div class="alert alert-warning">
-           <button type="button" class="close" data-dismiss="alert">&times;</button>
-           <%= flash[:alert] %>
-         </div>
-       <% end %>
+    <div class="alert alert-success">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+  <% if flash[:error] %>
+    <div class="alert alert-danger">
+      <button type="button" class="close" data-dismiss ="alert">&times;</button>
+      <%= flash[:error] %>
+    </div>
+  <% end %>
+  <% if flash[:alert] %>
+     <div class="alert alert-warning">
+       <button type="button" class="close" data-dismiss="alert">&times;</button>
+       <%= flash[:alert] %>
+     </div>
+   <% end %>
 
 <%= yield %>
 </div>
