--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,14 @@
 <h1><%= @post.title %></h1>
 
-<%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success'%>
+<div class="row">
+  <div class="col-md-8">
+    <p><%= @post.body %></p>
+  </div>
 
-<p><%= @post.body %></p>
+  <div class="col-md-4">
+   <% if policy(@post).edit? %>
+   <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success'%>
+  <% end %>
+
+  </div>
+</div>
