Complete Topics and Posts assignment

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,7 @@
   <div class="col-md-4">
    <% if policy(@post).edit? %>
    <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success'%>
+   <%= link_to "Summary", post_summary_path(@topic, @post, @summary), class: 'btn btn-success'%>
   <% end %>
 
   </div>
