--- a/app/views/summaries/new.html.erb
+++ b/app/views/summaries/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Summaries#new</h1>
-<p>Find me in app/views/summaries/new.html.erb</p>
+<h1>New Summary</h1>
+
+<div class="row">
+  <div class="col-md-4">
+    <p>Guidelines for summaries</p>
+    <ul>
+      <li>Make sure it is descriptive</li>
+      <li>hashtags are not allowed</li>
+
+    </ul>
+  </div>
+  <div class="col-md-8">
+    <%= form_for [@post, @summary] do |f| %>
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control', placeholder: "Enter Summary title" %>
+    </div>
+    <div class= "form-group">
+      <%= f.label :body %>
+      <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter Summary body " %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Save", class: 'btn btn-success' %>
+    </div>
+    <% end %>
+  </div>
+</div>
