--- a/app/views/summaries/show.html.erb
+++ b/app/views/summaries/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Summaries#show</h1>
-<p>Find me in app/views/summaries/show.html.erb</p>
+<h1><%= @summary.title %></h1>
+
+<div class="row">
+  <div class="col-md-8">
+    <p><%= @summary.body%></p>
+  </div>
+
+  <div class="col-md-4">
+    <% if policy(@post).edit? %>
+    <%= link_to "Edit", edit_post_summary_path(@post, @summary), class: 'btn btn-success'%>
+    <% end %>
+  </div>
+</div>
