Fixed topics index view to add description

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,7 +9,7 @@
           <%= link_to topic.name, topic %>
         </h4>
         <small>
-          <% topic.description %>
+          <%= topic.description %>
         </small>
       </div>
     </div>
