--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @topic.name %></h1>
+<h1><%= markdown_to_html @topic.name %></h1>
 
 <%if policy(@topic).update? %>
   <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
@@ -6,12 +6,12 @@
 
 <div class="row">
   <div class="col-md-8">
-    <p class="lead"><%= @topic.description %></p>
+    <p class="lead"><%= markdown_to_html @topic.description %></p>
     <% @posts.each do |post| %>
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
-            <%= link_to post.title, [@topic, post] %>
+            <%= link_to (markdown_to_html post.title), [@topic, post] %>
           </h4>
           <small>
             submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
