Complete uploading images assignment

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,15 @@
 
 <div class="row">
   <div class="col-md-8">
+    <big> 
+      <%= image_tag(@post.image.small.url) if @post.image? %>
+      <big>
     <small> 
       <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
       submitted <%= time_ago_in_words(@post.created_at) %> ago by
       <%= @post.user.name %>
+      <small>
+       
     <p><%= markdown_to_html @post.body %></p>
   </div>
 
