--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,3 +16,13 @@
 
   </div>
 </div>
+  <h4>Comments</h4>
+  <%= render @comments %>
+
+ <div class="row">
+  <div class="col-md-8">
+    <%= render 'comments/form', topic: @topic, comment: @comment, post: @post %>
+  </div>
+</div>
+
+
