Complete comments  assignment

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,13 +16,14 @@
 
   </div>
 </div>
+
   <h4>Comments</h4>
   <%= render @comments %>
-
+ <% if policy(@comment).create? %>
  <div class="row">
   <div class="col-md-8">
     <%= render 'comments/form', topic: @topic, comment: @comment, post: @post %>
   </div>
 </div>
-
+<% end %>
 
