--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,8 +11,12 @@
 
   <div class="col-md-4">
    <% if policy(@post).edit? %>
-   <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success'%>
-  <% end %>
+     <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success'%>
+   <% end %>
+
+   <% if policy(@post).destroy? %>
+    <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete the post?'} %>
+    <% end %>
 
   </div>
 </div>
