--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,7 +3,6 @@
 <%if policy(@topic).update? %>
   <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
   <% end %>
-
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= markdown_to_html @topic.description %></p>
@@ -29,5 +28,9 @@
       <% if policy(Post.new).create? %>
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
       <% end %>
+      
+       <% if policy(@topic).destroy? %>
+       <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %> 
+     <% end %>
     </div>
   </div>
