--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-<%= form_for [topic, post, comment] do |f| %>
+<%= form_for [post, comment] do |f| %>
    <% if comment.errors.any? %>
      <div class="alert alert-danger">
        <h4>There are <%= pluralize(comment.errors.count, "error") %>.</h4>
