--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import "bootstrap-sprockets"; 
 @import "bootstrap";
 
   .user-info {
@@ -20,4 +22,9 @@
     }
   .nav {
     margin-top:5 px;
+   }
+
+   .vote-arrows {
+   width: 40px;
+   text-align: center;
    }
