--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -8,6 +8,7 @@
     <p class="lead"><%= markdown_to_html @topic.description %></p>
     <% @posts.each do |post| %>
       <div class="media">
+        <%= render partial: 'votes/voter', locals: { post: post} %> 
         <div class="media-body">
           <h4 class="media-heading">
             <%= link_to (markdown_to_html post.title), [@topic, post] %>
