--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 
-     
+     <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
      <%= comment.body %> 
      <% if comment.user %>
      <small> 
@@ -12,3 +12,4 @@
     </small>
     <% end %>
    <br/>
+   <% end %> 
