finished public profile checkpoint

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,7 +7,7 @@
       <em> <%= image_tag(comment.user.avatar.tiny.url) %></em>
       <em> <%=comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago</em>
       <% if policy(comment).destroy? %>
-      | <%= link_to "Delete", [@post, comment], method: :delete %>
+      | <%= link_to "Delete", [comment.post, comment], method: :delete %>
       <% end %>
     </small>
     <% end %>
