--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -30,7 +30,7 @@
   </div>
 </div>
   <h4>Comments</h4>
-  <%= render @comments %>
+  <%= render partial: 'comments/comment', collection: @comments %>
 
  <div class="row">
   <div class="col-md-8">
