--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -8,7 +8,7 @@
     </h4>
     <small>
       <%= pluralize(user.posts_count, 'post') %>
-      <%= pluralize(user.comments_count, 'comment') %>
+      <div class='js-comments-count'><%= pluralize(user.comments.count, 'comment') %></div>
     </small>
   </div>
 </div>
