--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,5 +1,5 @@
 <% if @comment.destroyed? %>
- $('#comment-' +<%= @comment.id %>).hide();
+ $('#comment-' +<%= @comment.id %>).fadeOut(["fast"]);
  $('.js-comments-count').html("<%= pluralize(@comment.user.comments.count, 'comment') %>");
 
 <% else %>
