--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,16 +1,16 @@
 <% if current_user %>
-<%= form_for [post, comment] do |f| %>
-   <% if comment.errors.any? %>
+<%= form_for [@post, @comment], remote: true do |f| %>
+   <% if @comment.errors.any? %>
      <div class="alert alert-danger">
-       <h4>There are <%= pluralize(comment.errors.count, "error") %>.</h4>
+       <h4>There are <%= pluralize(@comment.errors.count, "error") %>.</h4>
        <ul>
-         <% comment.errors.full_messages.each do |msg| %>
+         <% @comment.errors.full_messages.each do |msg| %>
            <li><%= msg %></li>
          <% end %>
        </ul>
      </div>
    <% end %>
-  <%= form_group_tag(comment.errors[:body]) do %>
+  <%= form_group_tag(@comment.errors[:body]) do %>
    <%= f.label :New_Comment %>
    <%= f.text_field :body, class: 'form-control', placeholder: "Type a new comment" %>
    <% end %>
