--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -34,7 +34,7 @@
   <%= render partial: 'comments/comment', collection: @comments %>
  </div>
     <div class='new-comment'>
-  <%= render 'comments/form' %>
+  <%= render partial: 'comments/form', locals: { post: @post, comment: @comment } %>  
  </div>
 </div>
 
